--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ button {
 
 @media (max-width: 600px) {
   body {
-    background: url('background-desktop.png') no-repeat center center fixed;
+    /* background: url('background-desktop.png') no-repeat center center fixed; */
     background-size: cover;
   }
 }
